# inept

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml  pull-request-checks.yml
core/: CMakeLists.txt
core/include/core/: camera.h  integrator.h  material.h  primitive.h  ray.h  sampler.h  scene.h  sphere.h  surfaceinteraction.h  triangle.h  vector3d.h
core/src/: camera.cpp  integrator.cpp  material.cpp  primitive.cpp  ray.cpp  sampler.cpp  scene.cpp  sphere.cpp  surfaceinteraction.cpp  triangle.cpp  vector3d.cpp
core/test/: camera.test.cpp  material.test.cpp  primitive.test.cpp  ray.test.cpp  sampler.test.cpp  scene.test.cpp  sphere.test.cpp  surfaceinteraction.test.cpp  triangle.test.cpp  vector3d.test.cpp
doc/: class_diagram.drawio
inept-cli/: CMakeLists.txt
inept-cli/src/: main.cpp
